JumpScript/tests/baselines/reference/asyncFunctionDeclaration9_es2017.errors.txt
tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration9_es2017.jump(2,19): error TS1109: Expression expected.


==== tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration9_es2017.jump (1 errors) ====
    async function foo(): Promise<void> {
      var v = { [await]: foo }
                      ~
!!! error TS1109: Expression expected.
    }